--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 17
-    buildToolsVersion '19.1.0'
+    compileSdkVersion 19
+    buildToolsVersion '21.1.2'
 
     defaultConfig {
-        packageName "com.neschur.kb2.app"
+        applicationId "com.neschur.kb2.app"
         minSdkVersion 15
         targetSdkVersion 17
         versionCode 1
@@ -13,12 +13,12 @@ android {
     }
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
 }
