--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,7 @@ android {
         applicationId 'by.siarhei.kb2'
         minSdkVersion 16
         targetSdkVersion 25
-        versionCode 1
-        versionName "1.0"
+        versionName '0.9.1'
     }
     buildTypes {
         release {
