--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
+*.iml
 .gradle
 /local.properties
 /.idea/workspace.xml
 /.idea/libraries
 .DS_Store
 /build
-/app/*.apk
+/captures
+.externalNativeBuild
+/app/release
