--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.1"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId 'by.siarhei.kb2'
         minSdkVersion 15
         targetSdkVersion 26
-        versionCode 4
-        versionName '0.9.3'
+        versionCode 5
+        versionName '0.9.4'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
