--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:25.3.1'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
