--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,7 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
-/.idea/caches
-/.idea/deploymentTargetDropDown.xml
+/.idea/
 .DS_Store
 /build
 /captures
