--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdk 33
     buildToolsVersion '31.0.0'
     defaultConfig {
         applicationId 'by.siarhei.kb2'
-        minSdkVersion 14
-        targetSdkVersion 31
-        versionCode 7
-        versionName '0.10.0'
+        minSdk 23
+        targetSdk 31
+        versionCode 8
+        versionName '1.0.0'
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
